--- a/_quarto.yml
+++ b/_quarto.yml
@@ -12,6 +12,8 @@ website:
         href: index.qmd
       - text: "About me"
         href: about.qmd
+       - text: "Publications"
+        href: publi.qmd
 
 format:
   html:
