--- a/_quarto.yml
+++ b/_quarto.yml
@@ -14,6 +14,8 @@ website:
         href: about.qmd  
       - text: "My research"
         href: index.qmd
+      - text: "Publications"
+        href: publi.qmd
 
 
 
