--- a/_quarto.yml
+++ b/_quarto.yml
@@ -10,10 +10,10 @@ website:
   back-to-top-navigation: true
   navbar:
     left:
+      - text: "Home"
+        href: index.qmd
       - text: "About me"
         href: about.qmd  
-      - text: "My research"
-        href: index.qmd
       - text: "Publications"
         href: publi.qmd
 
