--- a/_quarto.yml
+++ b/_quarto.yml
@@ -8,6 +8,7 @@ website:
   title: "Armelle Ballian"
   reader-mode: true
   back-to-top-navigation: true
+  footer: _footer.qmd
   navbar:
     left:
       - text: "Home"
@@ -17,7 +18,7 @@ website:
       - text: "Publications"
         href: publi.qmd
 
-body-header: footer.qmd
+
 format:
   html:
     theme: cosmo
