--- a/_quarto.yml
+++ b/_quarto.yml
@@ -17,7 +17,7 @@ website:
         href: about.qmd  
       - text: "Publications"
         href: publi.qmd
-      - text: "Curriculum Vitae"
+      - text: "CV"
         href: cv.qmd
 
 
